// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButton
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="primary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={true}
    flat={false}
    onClick={null}
    type="primary"
    wrapContent={true}
  >
    <Button
      className="css-dvo0mj "
      disabled={true}
      onClick={null}
    >
      <button
        className="css-dvo0mj  css-1rn65c0"
        disabled={true}
        onClick={null}
      >
        <div
          className="css-4uxwj9"
        >
          Press me
        </div>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="primary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="primary"
    wrapContent={false}
  >
    <Button
      className="css-1uxw61o "
      disabled={false}
      onClick={null}
    >
      <button
        className="css-1uxw61o  css-1rn65c0"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="css-8s1fw2 "
          color="#000"
          fill={true}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-8s1fw2 "
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<Button
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  type="primary"
  wrapContent={false}
>
  <Ripple
    className="css-8s1fw2 "
    color="#000"
    fill={true}
    overflow={false}
    size={null}
  >
    Press me
  </Ripple>
</Button>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="regular"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="regular"
    wrapContent={false}
  >
    <Button
      className="css-1gr82ub "
      disabled={false}
      onClick={null}
    >
      <button
        className="css-1gr82ub  css-1rn65c0"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="css-8s1fw2 "
          color="#000"
          fill={true}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-8s1fw2 "
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="secondary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="secondary"
    wrapContent={false}
  >
    <Button
      className="css-1pv16t3 "
      disabled={false}
      onClick={null}
    >
      <button
        className="css-1pv16t3  css-1rn65c0"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="css-8s1fw2 "
          color="#000"
          fill={true}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-8s1fw2 "
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;
